Fri May  8 13:08:57 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, html.c, latex.c, text.c: checkin of Michel's export patch.

Wed May  6 21:24:09 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gtkfile.c, gtkfile.h, gtkgame.c: Re-implement the load commands menu
	item

Wed May  6 15:44:22 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gnubg.c: too good to redouble-pass errors didn't get annotated

Tue May  5 22:55:53 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, commands.inc, eval.c: add command to clear cache for
	test purposes

Tue May  5 18:08:56 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gtktempmap.c: fix font size for locales using comma

Sun Apr 26 23:01:07 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* format.c, format.h, gnubg.c, html.c, progress.c, progress.h,
	rollout.c, rollout.h:  Fix the rollout timer to allow for stopped
	rollouts and differing number of games done. Print the rollout context
	in the text progress.

Sun Apr 26 01:02:06 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* rollout.c: mt rollouts stopped one short of the minum number of
	trials when using jsd or sd criteria.

Sat Apr 25 22:01:35 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* AUTHORS, credits.sh, non-src/credits.c: Add Ingo Macherius to list
	of code contributors.
	
Fri Apr 24 21:55:27 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, renderprefs.c, renderprefs.h: Clean the CommandSaveSettings
	function up, and fix a (gtk) bug where saving the settings would pop
	an error message about resource unavailable. 

Wed Apr 22 18:28:09 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* progress.c: show the number of trials finished for each of
	candidates

Tue Apr 21 01:08:20 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* import.c: match wasn't cleared before import of mat files

Mon Apr 20 17:46:37 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gtkboard.c, play.c: fix a minor problem in quick_roll and dont' call